--- a/hexo/_config.yml
+++ b/hexo/_config.yml
@@ -9,7 +9,7 @@ description:
 author: riven
 language: zh-Hans
 timezone: Asia/Shanghai
-
+keywords: web,iOS,python,前端
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://yoursite.com
